# transformer_fusion_mer

./: pyproject.toml
data/: rename_utils.py  renamer.py
data/preprocessed_AV_data/: all_extracted_mfcc_list.npy  all_frames_face_images_X.npy  all_frames_face_lands_X.npy  all_train_test_classification_Y.npy  all_video_emotions_Y.npy
source/: config.py
source/audio_face_transformer/: download_video.py  get_data.py  model.py  predict.py  preprocess_main.py  tr_config.py  utils.py
