[tool.poetry]
name = "cvproject"
version = "0.1.0"
description = "MER project with image and audio"
authors = ["Artur <pak.arthure@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"  # Adjust this to your Python version
albumentations = "1.3.0"
ffmpeg = "1.4"
ffmpeg_python = "0.2.0"
imutils = "0.5.4"
ipython = "8.9.0"
librosa = "0.9.2"
matplotlib = "3.6.2"
mediapipe = "^0.9"
more_itertools = "9.0.0"
moviepy = "1.0.3"
nltk = "3.8.1"
noisereduce = "2.0.1"
pandas = "1.5.1"
Pillow = "9.4.0"
psutil = "5.9.4"
pytest = "7.2.1"
pytube = "12.1.2"
regex = "2022.10.31"
scikit_learn = "1.2.1"
scipy = "1.10.0"
setuptools = "65.5.0"
spacy = "3.5.0"
# torch==1.13.1+cu116  # Kept as comment for version reference
tqdm = "4.64.1"
transformers = "4.25.1"
python-vlc = "3.0.18121"
hyperopt = "0.2.7"
torch = "1.13.1"
torchvision = "0.14.1"
torchaudio = "0.13.1"
numpy = "1.23.5"
imgaug = "^0.4.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
